--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,22 +47,18 @@ h5,
 h6,
 span {
   color: var(--green);
-    font-family: var(--InterTight);
-
+  font-family: var(--InterTight);
 }
 
 h1 {
   font-size: 5.6rem;
-  line-height: 0.85;
-  letter-spacing: -3px;
-  text-transform: uppercase;
+  line-height: 1.2em;
 }
 
 h2 {
-  font-size: 1.8rem;
-  line-height: 1;
-  letter-spacing: 0.5px;
-  font-weight: normal;
+  font-size: 4.8rem;
+  font-weight: 500;
+  line-height: 1.2em;
 }
 
 h3 {
@@ -98,10 +94,7 @@ p,
 input,
 textarea {
   hyphens: auto;
-  letter-spacing: -0.4px;
-  margin-bottom: 0;
-  color: var(--blue);
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 
 input:focus,
@@ -133,12 +126,6 @@ section {
   background: var(--secondary);
 } */
 
-/* .h2v2 {
-  font-size: 6rem;
-  font-weight: 500;
-  line-height: 1;
-  letter-spacing: -0.04em;
-} */
 
 @media screen and (max-width: 768px) {
   html {
