--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,7 @@
 :root {
-  --black: #333438;
-  --tan: #f2e5bf;
-  --green: #257180;
-  --blue: #257180;
-  --blueBorder: #257180;
+  --black: #1e1738;
+  --pink: #fcd2cd;
+  --purple: #bdb7d5;
 }
 
 * {
@@ -46,13 +44,14 @@ h4,
 h5,
 h6,
 span {
-  color: var(--green);
+  color: var(--black);
   font-family: var(--InterTight);
 }
 
 h1 {
   font-size: 5.6rem;
   line-height: 1.2em;
+  font-weight: 600;
 }
 
 h2 {
@@ -102,10 +101,6 @@ textarea:focus {
   outline: none;
 }
 
-section {
-  background-color: var(--tan);
-}
-
 /* .toastFont {
   font-family: var(--ABCSocialLight);
 } */
@@ -125,7 +120,6 @@ section {
 ::-moz-selection {
   background: var(--secondary);
 } */
-
 
 @media screen and (max-width: 768px) {
   html {
