--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -5,7 +5,12 @@
     rgba(252, 210, 205, 1) 15%,
     rgba(189, 183, 213, 1) 65%
   );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: relative;
+  width: 100%;
 }
 
 .container::after {
@@ -15,17 +20,20 @@
   width: 100%;
   height: 100%;
   content: "";
-  opacity: 0.04;
+  opacity: 0.03;
   pointer-events: none;
   background: url(../../../public/noise.gif);
 }
 
 .content {
+  /* padding-top: 18rem; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 3rem;
+  gap: 2rem;
+  position: relative;
+  z-index: 998;
 }
 
 .heading {
@@ -34,7 +42,7 @@
 
 .copy,
 .span {
-  width: 50%;
+  max-width: 640px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -42,6 +50,20 @@
 }
 
 .span {
-  font-weight: 700;
+  font-weight: 800;
   margin-left: 0.3rem;
+}
+
+.box {
+  position: relative;
+}
+
+.sceneContainer {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1500px;
+  height: 1500px;
+  z-index: -1;
 }
