--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -63,7 +63,7 @@
   top: 0%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 1500px;
-  height: 1500px;
+  width: 100vw;
+  height: 100vh;
   z-index: -1;
 }
