--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,7 @@
 :root {
   --black: #1e1738;
+  --blue: #162f35;
+  --white: #ffffff;
   --pink: #fcd2cd;
   --purple: #bdb7d5;
 }
@@ -137,7 +139,6 @@ textarea:focus {
   p {
     font-size: 113.7%;
   }
-
 }
 
 @media screen and (max-width: 568px) {
@@ -152,8 +153,6 @@ textarea:focus {
   h2 {
     font-size: 2.4rem;
   }
-
-
 }
 
 /* .toastFont {
