--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -2,7 +2,7 @@
   padding: 1.5rem 2.4rem;
   transition: all 0.3s ease-in-out;
   position: fixed;
-  top: 50px;
+  top: 70px;
   left: 0;
   right: 0;
   left: 50%;
@@ -77,7 +77,6 @@
 } */
 
 .navItems {
-  border: 1px solid var(--blue);
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
@@ -88,7 +87,6 @@
   justify-content: flex-end;
   background-color: var(--tan);
   /* padding: 1rem; */
-  border: 1px solid var(--blue);
   width: fit-content;
   margin-left: auto;
 }
@@ -135,7 +133,6 @@
   }
 
   .navbar {
-   
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -201,9 +198,8 @@
     width: 100%;
     padding: 2rem;
     padding-bottom: 1rem;
-    color: var(--blue);
+    color: var(--black);
   }
-
 
   .hamburger {
     display: block;
