--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,5 +1,5 @@
 .container {
-  height: 75vh;
+  height: 100vh;
   background: linear-gradient(
     135deg,
     rgba(252, 210, 205, 1) 15%,
@@ -26,7 +26,8 @@
 }
 
 .content {
-  /* padding-top: 18rem; */
+  padding-top: 18rem;
+  padding-bottom: 10rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,6 +54,11 @@
 .span {
   font-weight: 800;
   margin-left: 0.3rem;
+}
+
+.btnContainer {
+  display: grid;
+  width: 20%;
 }
 
 .box {
