--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
   text-decoration: none;
   line-height: 120%;
   scroll-behavior: smooth;
-  scroll-margin-top: 120px;
+  /* scroll-margin-top: 50px; */
   overscroll-behavior: none;
   -webkit-tap-highlight-color: transparent;
   font-family: var(--InterTight);
