--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -29,6 +29,13 @@
   width: 80%;
 }
 
+.btnContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
 .right {
   border: 1px solid var(--lightGray);
   display: flex;
@@ -132,5 +139,13 @@
 @media screen and (max-width: 768px) {
   .content {
     padding: 0rem;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .btnContainer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 100%;
   }
 }
