--- a/src/components/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/ProjectsSection/ProjectsSection.module.css
@@ -1,3 +1,87 @@
 .container {
   background-color: var(--white);
 }
+
+.top {
+  margin-bottom: 5rem;
+}
+
+.heading {
+  margin-top: 3rem;
+}
+
+.copy {
+  font-size: 2rem;
+  opacity: 0.7;
+}
+
+.bottom {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  border-radius: 15px;
+  overflow: hidden;
+  border: 1px solid var(--lightGray);
+}
+
+.bottomLeft {
+  background: linear-gradient(
+    135deg,
+    rgba(252, 210, 205, 1) 15%,
+    rgba(189, 183, 213, 1) 65%
+  );
+  width: 100%;
+  height: 100%;
+}
+
+.section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 100%;
+  border-bottom: 1px dashed var(--lightGray);
+}
+
+.title {
+  padding: 2rem;
+  border-right: 1px dashed var(--lightGray);
+  font-size: 2.1rem;
+}
+
+.description {
+  padding: 2rem;
+}
+
+.btnContainer {
+  display: grid;
+  width: 100%;
+
+  padding: 1rem;
+}
+
+@media screen and (max-width: 1068px) {
+  .heading,
+  .copy {
+    text-align: center;
+  }
+
+  .heading {
+    margin-top: 1rem;
+  }
+
+  .bottom {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .bottomLeft {
+    height: 350px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .top {
+    margin-bottom: 2rem;
+  }
+
+  .bottomLeft {
+    height: 300px;
+  }
+}
