--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,5 +1,5 @@
 .container {
-  height: 75vh;
+  /* height: 75vh; */
   background: linear-gradient(
     135deg,
     rgba(252, 210, 205, 1) 15%,
@@ -28,7 +28,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
   position: relative;
   z-index: 998;
 }
@@ -54,7 +54,8 @@
 
 .btnContainer {
   display: grid;
-  width: 20%;
+  width: 25%;
+  margin-top: 1rem;
 }
 
 .box {
