--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -1,7 +1,88 @@
 .container {
-    margin-top: 10rem;
+  margin-top: 10rem;
+}
+
+.top {
+  margin-bottom: 3rem;
 }
 
 .heading {
-    text-align: center;
+  text-align: center;
+}
+
+.bottom {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+  background-image: repeating-linear-gradient(
+    45deg,
+    var(--purple),
+    var(--pink) 1px,
+    transparent 0,
+    transparent 50%
+  );
+  background-size: 6px 6px;
+  border-radius: 15px;
+  padding: 5rem;
+}
+
+.card {
+  border-radius: 15px;
+  border: 1px solid var(--lightGray);
+  overflow: hidden;
+  background-color: var(--white);
+}
+
+.imgContainer {
+  position: relative;
+  width: 100%;
+  height: 300px;
+}
+
+.img {
+  object-fit: cover;
+}
+
+.title,
+.description {
+  padding: 2rem;
+  border-bottom: 1px dashed var(--lightGray);
+}
+
+.linksBox {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.link1,
+.link2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+}
+
+.link1 {
+  border-right: 1px dashed var(--lightGray);
+}
+
+.btnContainer {
+  border-top: 1px dashed var(--lightGray);
+  display: grid;
+  padding: 2rem;
+}
+
+@media screen and (max-width: 1068px) {
+  .bottom {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 3rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .bottom {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 3rem;
+    padding: 2rem;
+  }
 }
