--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -14,16 +14,9 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
-  background-image: repeating-linear-gradient(
-    45deg,
-    var(--purple),
-    var(--pink) 1px,
-    transparent 0,
-    transparent 50%
-  );
-  background-size: 6px 6px;
+  background-color: var(--purple);
   border-radius: 15px;
-  padding: 5rem;
+  padding: 1rem;
 }
 
 .card {
@@ -72,17 +65,14 @@
   padding: 2rem;
 }
 
-@media screen and (max-width: 1068px) {
+@media screen and (max-width: 1268px) {
   .bottom {
     grid-template-columns: repeat(2, 1fr);
-    padding: 3rem;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 968px) {
   .bottom {
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 3rem;
-    padding: 2rem;
   }
 }
