--- a/src/components/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/ProjectsSection/ProjectsSection.module.css
@@ -1,9 +1,10 @@
 .container {
   background-color: var(--white);
+  padding: 0rem 10rem;
 }
 
 .top {
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
 }
 
 .heading {
@@ -43,11 +44,12 @@
 .title {
   padding: 2rem;
   border-right: 1px dashed var(--lightGray);
-  font-size: 2.1rem;
+  font-size: 1.8rem;
 }
 
 .description {
   padding: 2rem;
+  opacity: 0.7;
 }
 
 .btnContainer {
@@ -58,6 +60,10 @@
 }
 
 @media screen and (max-width: 1068px) {
+  .container {
+    padding: 0rem 7rem;
+  }
+
   .heading,
   .copy {
     text-align: center;
@@ -76,7 +82,17 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0rem 4rem;
+  }
+}
+
 @media screen and (max-width: 568px) {
+  .container {
+    padding: 0rem;
+  }
+
   .top {
     margin-bottom: 2rem;
   }
