--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -51,3 +51,18 @@
   background-color: var(--blue);
   color: var(--white);
 }
+
+.purple {
+  background: linear-gradient(
+    135deg,
+    rgb(241, 180, 173) 15%,
+    rgb(127, 98, 243) 65%
+  );
+  border: 1px solid var(--blue);
+  color: var(--white);
+}
+
+.purple:hover {
+box-shadow: 0px 4px 4px 0px rgba(153, 126, 152, 1),
+    0px 25px 35px 0px rgba(0, 0, 0, 0.15);  border: 1px solid var(--white);
+}
