--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -38,10 +38,12 @@
 }
 
 .btnContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5rem;
 }
 
 .right {
