Static button effect

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   --white: #ffffff;
   --pink: #fcd2cd;
   --purple: #bdb7d5;
+  --purple2: #7f62f3;
   --gray: #787a7d;
   --lightGray: #aab9c5;
 }
