--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -53,16 +53,31 @@
 }
 
 .purple {
-  background: linear-gradient(
+  /* background: linear-gradient(
     135deg,
     rgb(241, 180, 173) 15%,
     rgb(127, 98, 243) 65%
   );
-  border: 1px solid var(--blue);
+  border: 1px solid var(--blue); */
+  background-color: var(--purple2);
   color: var(--white);
+  border: 1px solid var(--blue);
+  position: relative;
+}
+
+.purple::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  opacity: 0.05;
+  pointer-events: none;
+  background: url(../../../public/noise.gif);
 }
 
 .purple:hover {
-box-shadow: 0px 4px 4px 0px rgba(153, 126, 152, 1),
-    0px 25px 35px 0px rgba(0, 0, 0, 0.15);  border: 1px solid var(--white);
+  box-shadow: 0px 10px 10px 0px rgba(153, 126, 152, 1),
+    0px 15px 25px 0px rgba(0, 0, 0, 0.15);
 }
