--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -53,7 +53,9 @@
 
 .btnContainer {
   display: grid;
-  width: 25%;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  width: 50%;
   margin-top: 1rem;
 }
 
@@ -71,14 +73,19 @@
   z-index: -1;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 968px) {
   .btnContainer {
-    width: 50%;
+    width: 80%;
   }
 }
 
 @media screen and (max-width: 568px) {
   .btnContainer {
     width: 100%;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .box {
+    display: none;
   }
 }
