--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -42,6 +42,10 @@
   border-bottom: 1px dashed var(--lightGray);
 }
 
+.description {
+  opacity: 0.7;
+}
+
 .linksBox {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
