--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
   text-decoration: none;
   line-height: 120%;
   scroll-behavior: smooth;
-  /* scroll-margin-top: 50px; */
+  scroll-margin-top: 40px;
   overscroll-behavior: none;
   -webkit-tap-highlight-color: transparent;
   font-family: var(--InterTight);
