--- a/src/components/SectionHeading/SectionHeading.module.css
+++ b/src/components/SectionHeading/SectionHeading.module.css
@@ -8,9 +8,37 @@
 }
 
 .circle {
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   border-radius: 50%;
+  z-index: 1;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid var(--purple);
+  animation: pulse 1.5s infinite ease-in-out;
+}
+
+@keyframes pulse {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(2);
+    opacity: 0;
+  }
 }
 
 .span {
@@ -27,7 +55,7 @@
   background-color: var(--purple);
 }
 
-.blackeDot {
+.blackDot {
   background-color: var(--black);
 }
 
