--- a/src/components/SkillsSection/SkillsSection.module.css
+++ b/src/components/SkillsSection/SkillsSection.module.css
@@ -10,6 +10,11 @@
   );
 }
 
+.sectionHeadingContainer {
+  border-bottom: 1px solid var(--lightGray2);
+  padding-bottom: 1rem;
+  margin-bottom: 7rem;
+}
 .content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -32,7 +37,6 @@
   font-size: 1.6rem;
   font-weight: 600;
   color: var(--blue);
-  /* text-transform: uppercase; */
   text-align: center;
   cursor: pointer;
   transition: all 0.2s ease-in;
@@ -41,7 +45,7 @@
   justify-content: center;
   padding: 2rem;
   border-radius: 8px;
-  border: 1px solid var(--gray);
+  border: 1px solid var(--lightGray2);
   position: relative;
   width: 100%;
   user-select: none;
@@ -114,6 +118,14 @@
 @media screen and (max-width: 1168px) {
   .content {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .sectionHeadingContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 2rem;
+    margin-bottom: 2rem;
   }
 }
 
