--- a/src/components/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/ProjectsSection/ProjectsSection.module.css
@@ -37,7 +37,10 @@
   );
   width: 100%;
   height: 100%;
+  position: relative;
+  z-index: 998;
 }
+
 
 .section {
   display: grid;
@@ -71,6 +74,8 @@
   display: grid;
   width: 30%;
 }
+
+
 
 @media screen and (max-width: 1068px) {
   .sectionHeadingContainer {
