--- a/src/components/SectionHeading/SectionHeading.module.css
+++ b/src/components/SectionHeading/SectionHeading.module.css
@@ -26,7 +26,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 2px solid var(--purple);
+  border: 2px solid var(--purple2);
   animation: pulse 1.5s infinite ease-in-out;
 }
 
