--- a/src/components/BlogCard/BlogCard.module.css
+++ b/src/components/BlogCard/BlogCard.module.css
@@ -5,6 +5,34 @@
   border-radius: 15px;
   border: 1px solid var(--lightGray2);
   overflow: hidden;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+
+.cardContainer {
+  background-color: var(--purple2);
+  color: var(--white);
+  border: 1px solid var(--blue);
+  position: relative;
+  box-shadow: 0px 10px 10px 0px rgba(153, 126, 152, 1),
+    0px 15px 25px 0px rgba(0, 0, 0, 0.15);
+}
+
+.cardContainer::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  opacity: 0.05;
+  pointer-events: none;
+  background: url(../../../public/noise.gif);
+}
+
+.cardContainer:hover {
+  box-shadow: 0px 0px 0px 0px rgba(153, 126, 152, 1),
+    0px 0px 0px 0px rgba(0, 0, 0, 0.15);
 }
 
 .imgContainer {
@@ -15,7 +43,6 @@
 
 .img {
   object-fit: cover;
-  /* border-radius: 15px; */
 }
 
 .right {
@@ -35,8 +62,9 @@
 
 .title {
   font-size: 3.2rem;
-  border-top: 1px dashed var(--lightGray);
-  border-bottom: 1px dashed var(--lightGray);
+  color: var(--white);
+  border-top: 1px dashed var(--white);
+  border-bottom: 1px dashed var(--white);
   width: 100%;
   padding: 2rem;
   padding-left: 5rem;
@@ -44,16 +72,17 @@
 
 .desc {
   font-weight: 500;
-  border-bottom: 1px dashed var(--lightGray);
+  color: var(--white);
+  border-bottom: 1px dashed var(--white);
   padding: 2rem;
   padding-left: 5rem;
   width: 100%;
-  color: var(--gray);
 }
 
 .small {
+  color: var(--white);
   font-size: 1.5rem;
-  opacity: 0.7;
+  /* opacity: 0.7; */
   padding: 2rem;
   padding-left: 5rem;
 }
