--- a/src/components/FinalCTA/FinalCTA.module.css
+++ b/src/components/FinalCTA/FinalCTA.module.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 .heading {
@@ -27,14 +27,35 @@
   -webkit-text-fill-color: transparent;
 }
 
+.btnContainer {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 2rem;
+  width: 30%;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3rem;
+}
+
 @media screen and (max-width: 1068px) {
   .heading {
     width: 80%;
+  }
+
+  .btnContainer {
+    width: 50%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .heading {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .btnContainer {
     width: 100%;
   }
 }
