--- a/src/components/BlogSection/BlogSection.module.css
+++ b/src/components/BlogSection/BlogSection.module.css
@@ -1,6 +1,7 @@
 .container {
   background-color: var(--gray2);
   padding-top: 15rem;
+  padding-bottom: 15rem;
 }
 
 .heading {
@@ -18,8 +19,9 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   width: 30%;
-  margin-top: 2rem;
+  margin-top: 5rem;
   margin-left: auto;
+  margin-right: auto;
   
 }
 
