--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,134 @@
 .container {
   overflow: hidden;
-  background: linear-gradient(
-    -145deg,
-    rgba(252, 210, 205, 1) 15%,
-    rgba(189, 183, 213, 1) 65%
-  );
+  margin-top: 7rem;
+}
+
+.layoutWrapper {
+  z-index: 1000;
+  max-width: 1500px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+}
+
+.middleDesktop {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 2rem;
+}
+
+.heading {
+  color: var(--white);
+  font-weight: 600;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  user-select: none;
+}
+
+.bottomDesktop {
+  border-top: 1px solid gray;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.copy {
+  color: var(--white);
+  font: 1.2rem;
+  width: 100%;
+  margin-top: 2rem;
+}
+
+.lb2 {
+  padding: 2rem;
+  font-size: 0;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+@media screen and (max-width: 1068px) {
+  .top {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media screen and (max-width: 968px) {
+  .right {
+    align-items: center;
+    margin-top: 3rem;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .contentPadding {
+    padding: 3rem;
+    padding-top: 5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .right {
+    flex-direction: column;
+  }
+
+  .bottomDesktop {
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .layoutWrapper {
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  .contentPadding {
+    padding: 3rem 2rem;
+  }
+
+  .heading {
+    font-size: 1.8rem;
+  }
+
+  .leftBorder3 {
+    display: block;
+    margin-top: 3rem;
+  }
+
+  .heading {
+    font-size: 1.4rem;
+  }
+
+  .bottom {
+    border-top: none;
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+    margin-top: 2rem;
+  }
+
+  .copy {
+    text-align: center;
+  }
 }
