--- a/src/components/Faqs/Faqs.module.css
+++ b/src/components/Faqs/Faqs.module.css
@@ -1,6 +1,6 @@
 .container {
   padding-top: 15rem;
-  background-color: var(--gray2);
+  background-color: var(--white);
   border-radius: 20px;
 }
 
