--- a/src/components/BlogSection/BlogSection.module.css
+++ b/src/components/BlogSection/BlogSection.module.css
@@ -1,11 +1,12 @@
 .container {
-  background-color: var(--gray2);
-  padding-top: 15rem;
-  padding-bottom: 15rem;
+  margin-top: 7rem;
 }
 
 .heading {
   margin-bottom: 2rem;
+  text-align: center;
+  font-size: 2.4rem;
+  font-weight: 600;
 }
 
 .bBottom {
@@ -22,7 +23,6 @@
   margin-top: 5rem;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 @media screen and (max-width: 1068px) {
