--- a/src/components/Faqs/Faqs.module.css
+++ b/src/components/Faqs/Faqs.module.css
@@ -1,14 +1,22 @@
 .container {
   padding-top: 15rem;
-  background-color: var(--white);
+  background-color: var(--gray2);
   border-radius: 20px;
 }
 
 .sectionHeadingContainer {
-  border-bottom: 1px solid var(--lightGray2);
-  padding-bottom: 1rem;
+  padding: 2rem;
   width: 100%;
-  margin-bottom: 5rem;
+}
+
+.parent {
+  border: 1px solid var(--blue);
+  border-radius: 20px;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
+  background-color: var(--white);
 }
 
 .top {
@@ -17,7 +25,7 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  margin-bottom: 4rem;
+  /* margin-bottom: 4rem; */
 }
 
 .heading {
@@ -81,7 +89,6 @@
 }
 
 .qaContainer {
-  
   border: 1px dashed var(--blue);
   border-radius: 15px;
   width: 100%;
@@ -111,7 +118,6 @@
 .active .answer,
 .active .iconFlip {
   color: var(--white);
-  
 }
 
 .answerContainer {
@@ -198,5 +204,17 @@
     margin-left: auto;
     margin-right: auto;
     height: 350px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .parent {
+    padding: 2rem;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .parent {
+    padding: 1rem;
   }
 }
