--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin-top: 10rem;
+  margin-top: 20rem;
 }
 
 .top {
@@ -31,6 +31,7 @@
   position: relative;
   width: 100%;
   height: 300px;
+  display: none;
 }
 
 .img {
