--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -1,11 +1,12 @@
 .container {
   background-color: var(--blue);
+  
 }
 
 .top {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  border-top: 1px solid var(--lightGray2);
+  border-top: 1px solid var(--white);
   padding-top: 1.5rem;
   margin-top: 10rem;
 }
@@ -51,7 +52,7 @@
 }
 
 .right {
-  border: 1px solid var(--lightGray2);
+  border: 1px solid var(--white);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
