--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -115,47 +115,11 @@
   display: grid;
 }
 
-.btn {
-  text-align: center;
-  font-size: 1.8rem;
-  color: var(--tan);
-  background-color: var(--blue);
-  white-space: nowrap;
-  border: 1px solid var(--blueBorder);
-  text-transform: uppercase;
-  user-select: none;
-  transition: all 0.1s ease-in;
-  display: inline-block;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  padding: 9px 30px;
-  position: relative;
-  z-index: 1;
+.btnContainer {
+  /* padding: 2rem; */
+  display: grid;
   width: 100%;
-  line-height: 147%;
-  cursor: pointer;
-  position: relative;
-}
-
-.icon {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  color: var(--green2);
-  width: 27px;
-  height: 27px;
-  transition: all 0.1s ease-in;
-}
-
-.btn:hover {
-  background-color: var(--tan);
-  color: var(--blue);
-}
-
-.btn:hover .icon {
-  color: var(--blue);
+  grid-template-columns: repeat(1, 1fr);
 }
 
 @media screen and (max-width: 1100px) {
