--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -1,53 +1,42 @@
 .container {
-  background-image: repeating-linear-gradient(
-    45deg,
-    var(--blue),
-    var(--tan) 1px,
-    transparent 0,
-    transparent 50%
+  scroll-padding: 10rem;
+  background: rgb(241, 241, 242);
+  background: -moz-linear-gradient(
+    180deg,
+    rgba(241, 241, 242, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
   );
-  background-size: 6px 6px;
-}
-
-.heading {
-  padding: 2rem;
-  font-size: 3rem;
-  width: 50%;
-  margin-top: 10rem;
-  margin-left: auto;
-  margin-right: auto;
-  /* text-transform: uppercase; */
-  text-indent: 4em;
-  letter-spacing: -0.7px;
-  line-height: 1.1;
-  font-weight: 600;
-  background-color: var(--tan);
-  border: 1px solid var(--blue);
-  padding: 1rem 2rem;
-  padding-bottom: 1.5rem;
+  background: -webkit-linear-gradient(
+    180deg,
+    rgba(241, 241, 242, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  background: linear-gradient(
+    180deg,
+    rgba(241, 241, 242, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f1f1f2",endColorstr="#ffffff",GradientType=1);
 }
 
 .bottom {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   width: 100%;
-  border: 1px solid var(--blueBorder);
-  background-color: var(--tan);
+  border: 1px solid var(--blue);
+  border-radius: 15px;
+  overflow: hidden;
 }
 
 .sectionHeading,
 .sectionHeadingii {
-  text-transform: uppercase;
   font-weight: 600;
   font-size: 1.8rem;
-  line-height: 1;
-  letter-spacing: 0.5px;
-  font-family: var(--barlowCondensed);
   padding: 1.5rem 2rem;
-  border-bottom: 1px solid var(--blueBorder);
+  border-bottom: 1px solid var(--blue);
+  border-right: 1px solid var(--white);
   width: 100%;
-  color: var(--tan);
-  border-right: 1px solid var(--tan);
+  color: var(--white);
   background-color: var(--blue);
 }
 
@@ -61,13 +50,10 @@
 }
 
 .bottomLeft {
-  border-right: 1px solid var(--blueBorder);
+  border-right: 1px dashed var(--blue);
 }
 
 .copy {
-  font-family: var(--GTAmericaMonoRegular);
-  font-size: 1.6rem;
-  letter-spacing: -0.5px;
   padding: 2rem;
 }
 
@@ -78,12 +64,12 @@
 .brGrid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  width: 100%;
 }
 
 .br1,
 .br2 {
   width: 100%;
-  padding: 2rem;
 }
 
 .br1 {
@@ -94,7 +80,7 @@
   height: 100%;
   width: 100%;
   gap: 3rem;
-  border-right: 1px solid var(--blueBorder);
+  border-right: 1px dashed var(--blue);
 }
 
 .addressBox,
@@ -111,11 +97,14 @@
 }
 
 .address {
-  font-family: var(--GTAmericaMonoRegular);
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-style: normal;
-  text-transform: uppercase;
+  font-weight: 700;
+  opacity: 0.7;
+  border-bottom: 1px dashed var(--blue);
+  width: 100%;
   color: var(--blue);
+  padding: 1.5rem;
 }
 
 .contactBox {
@@ -124,6 +113,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   gap: 1.5rem;
+  width: 100%;
 }
 
 .imgContainer {
