--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,8 +1,8 @@
 .header {
-  padding: .7rem;
+  padding: 0.7rem;
   transition: all 0.3s ease-in-out;
   position: fixed;
-  top: 40px;
+  top: 50px;
   left: 0;
   right: 0;
   left: 50%;
@@ -43,7 +43,7 @@
 .logoContainerMobile {
   display: flex;
   align-items: center;
-  margin-left: .7rem;
+  margin-left: 0.7rem;
 }
 
 .logoContainerMobile {
@@ -62,8 +62,6 @@
   /* padding: 0rem 2rem; */
   position: relative;
 }
-
-
 
 /* .navItems::after,
 .navItemsii::after {
