bacc color update

--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -1,5 +1,5 @@
 .container {
-  scroll-padding: 10rem;
+  /* scroll-padding: 10rem; */
   background: rgb(241, 241, 242);
   background: -moz-linear-gradient(
     180deg,
