--- a/src/components/Faqs/Faqs.module.css
+++ b/src/components/Faqs/Faqs.module.css
@@ -2,6 +2,23 @@
   padding-top: 15rem;
   background-color: var(--gray2);
   border-radius: 20px;
+  background: rgb(241, 241, 242);
+  background: -moz-linear-gradient(
+    180deg,
+    rgba(241, 241, 242, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    180deg,
+    rgba(241, 241, 242, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  background: linear-gradient(
+    180deg,
+    rgba(241, 241, 242, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f1f1f2",endColorstr="#ffffff",GradientType=1);
 }
 
 .sectionHeadingContainer {
