--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -30,8 +30,8 @@
 .imgContainer {
   position: relative;
   width: 100%;
-  height: 300px;
-  display: none;
+  height: 200px;
+  /* display: none; */
 }
 
 .img {
