--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -18,9 +18,10 @@
   width: 90%;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px rgba(153, 126, 152, 1),
-    0px 15px 25px 0px rgba(0, 0, 0, 0.15);
+  0px 15px 25px 0px rgba(0, 0, 0, 0.15);
   /* padding: 8px 8px 8px 20px; */
   border: 1px solid #faf7f4;
+  border-top: 1px solid var(--lightGray);
 }
 
 .navbar {
