--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -32,6 +32,18 @@
   color: var(--blue);
 }
 
+.primary::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  opacity: 0.05;
+  pointer-events: none;
+  background: url(../../../public/noise.gif);
+}
+
 .primaryii {
   border: 2px dashed var(--blue);
   background-color: transparent;
