--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -102,6 +102,21 @@
 
 @media screen and (max-width: 768px) {
   .title {
-  padding-top: 20rem;
+    padding-top: 20rem;
+  }
 }
+
+@media screen and (max-width: 568px) {
+  .imgContainer {
+    width: 200px;
+    height: 200px;
+    top: 100px;
+    border-radius: 50%;
+  }
+
+  .img {
+    border: 8px solid var(--white);
+    border-radius: 50%;
+    object-fit: cover;
+  }
 }
