--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -47,7 +47,7 @@
   grid-template-columns: repeat(1, 1fr);
   width: 30%;
   margin-right: auto;
-  margin-top: 3rem;
+  margin-top: 5rem;
 }
 
 .right {
@@ -180,7 +180,7 @@
   .btnContainer {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     width: 60%;
   }
 }
