--- a/src/components/SectionHeading/SectionHeading.module.css
+++ b/src/components/SectionHeading/SectionHeading.module.css
@@ -46,6 +46,7 @@
   font-size: 1.5rem;
   font-weight: 500;
   letter-spacing: 7px;
+  opacity: 0.5;
   text-transform: uppercase;
   user-select: none;
 }
