new font + hero update

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --purple: #bdb7d5;
   --purple2: #7f62f3;
   --gray: #787a7d;
-  --gray2: #F1F1F2;
+  --gray2: #f1f1f2;
   --lightGray: #aab9c5;
   --lightGray2: #6c6c83;
 }
