--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -38,6 +38,11 @@
   text-align: center;
 }
 
+.heading2 {
+  font-family: var(--BoogyBrutPoster);
+  font-size: 6rem;
+}
+
 .copy,
 .span {
   max-width: 640px;
