--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -68,8 +68,9 @@
 }
 
 .index {
-  font-size: 5rem;
+  font-size: 5.5rem;
   color: var(--pink);
+  font-family: var(--BoogyBrutPoster);
 }
 
 .feature {
