--- a/src/components/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/ProjectsSection/ProjectsSection.module.css
@@ -2,7 +2,6 @@
   background-color: var(--white);
   padding-top: 10rem;
   padding-bottom: 10rem;
-  
 }
 
 .top {
@@ -15,6 +14,12 @@
   margin-bottom: 2rem;
 }
 
+.heading span {
+  font-family: var(--BoogyBrutPoster);
+  font-size: 5rem; 
+  margin-right: 1rem;
+
+}
 
 .copy {
   font-size: 2rem;
@@ -40,7 +45,6 @@
   position: relative;
   z-index: 998;
 }
-
 
 .section {
   display: grid;
@@ -76,8 +80,6 @@
   display: grid;
   width: 30%;
 }
-
-
 
 @media screen and (max-width: 1068px) {
   .sectionHeadingContainer {
