--- a/src/components/BlogSection/BlogSection.module.css
+++ b/src/components/BlogSection/BlogSection.module.css
@@ -1,15 +1,39 @@
+.container {
+  margin-top: 10rem;
+}
+
+.content {
+  border-top: 1px solid var(--gray);
+  padding-top: 5rem;
+  /* border-radius: 25px; */
+}
+
 .heading {
   margin-bottom: 2rem;
   text-align: center;
   font-size: 2.4rem;
   font-weight: 600;
+  background-color: var(--white);
+  position: relative;
+  top: 50px;
+  width: fit-content;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0rem 4rem;
+}
+
+.heading {
+  font-family: var(--BoogyBrutPoster);
+  color: var(--blue);
+  font-size: 6rem;
 }
 
 .bBottom {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 
 .btnContainer {
@@ -22,11 +46,6 @@
 }
 
 @media screen and (max-width: 1068px) {
-  .heading {
-    text-align: center;
-    width: 100%;
-  }
-
   .bBottom {
     grid-template-columns: repeat(2, 1fr);
   }
