--- a/src/components/Faqs/Faqs.module.css
+++ b/src/components/Faqs/Faqs.module.css
@@ -42,7 +42,6 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  /* margin-bottom: 4rem; */
 }
 
 .heading {
@@ -71,8 +70,8 @@
 
 .imgContianer {
   position: relative;
-  width: 70%;
-  height: 70%;
+  width: 50%;
+  height: 50%;
   animation: float 5s ease-in-out infinite;
 }
 
@@ -144,7 +143,7 @@
 }
 
 .active .answer {
-  padding: 2rem;
+  padding-bottom: 1.5rem;
 }
 
 .answerContainer.show {
@@ -157,7 +156,7 @@
   gap: 2rem;
   border-bottom: 1px dashed var(--lightGray);
   width: 100%;
-  padding: 3rem;
+  padding: 2rem;
 }
 
 .icon {
@@ -182,7 +181,7 @@
 .question {
   color: var(--blue);
   line-height: 130%;
-  font-size: 2.1rem;
+  font-size: 1.8rem;
 }
 
 .answerbox {
