--- a/src/components/FinalCTA/FinalCTA.module.css
+++ b/src/components/FinalCTA/FinalCTA.module.css
@@ -48,6 +48,11 @@
   gap: 5rem;
 }
 
+.headingii {
+  font-family: var(--BoogyBrutPoster);
+  font-size: 3rem;
+}
+
 .headingii,
 .copyii {
   color: var(--white);
