--- a/src/components/BlogCard/BlogCard.module.css
+++ b/src/components/BlogCard/BlogCard.module.css
@@ -105,4 +105,19 @@
   .imgContainer {
     height: 250px;
   }
+  .sectionHeadingContainer,
+  .title,
+  .desc,
+  .small {
+    padding: 2rem 3rem;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .sectionHeadingContainer,
+  .title,
+  .desc,
+  .small {
+    padding: 2rem;
+  }
 }
