--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -35,6 +35,10 @@
   border: 1px solid var(--lightGray);
   border-radius: 50%;
   transition: all 0.2s ease-in;
+  /* background-image: url(../../../public//images/chuxly.jpg);
+  background-position: 0 100%;
+  background-size: cover;
+  background-attachment: fixed; */
 }
 
 .img {
