Process spacing updated

--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -142,6 +142,10 @@
   font-weight: 600;
 }
 
+.processContainer {
+  margin-top: 20rem;
+}
+
 @media screen and (max-width: 1068px) {
   .top,
   .box {
