--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -17,6 +17,31 @@
   gap: 2rem;
 }
 
+.imgContianer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  /* animation: float 5s ease-in-out infinite; */
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-50px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  75% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 .span {
   color: var(--purple);
   letter-spacing: 7px;
